--- a/src/style/base.less
+++ b/src/style/base.less
@@ -6,3 +6,62 @@
   margin: 0;
   padding: 0 20rpx;
 }
+.divider{
+  background: #efefef;
+  width: 100%;
+  height: 15rpx;
+}
+.brandItem{
+  display: flex;
+  flex-direction: row;
+  height: 200rpx;
+  width: 100%;
+  .head-icon{
+    width: 200rpx;
+    height: 200rpx;
+    image{
+      width: 100%;
+      height: 100%;
+      border-radius: 10rpx;
+    }
+  }
+  .brand-info{
+    margin-left: 20rpx;
+    overflow: hidden;
+    .info-detail{
+      margin-bottom: 10rpx;
+    }
+    .info-name{
+      color: #4f4f4f;
+      font-size: 32rpx;
+      font-weight: 700;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+    .info-score{
+      display: flex;
+      flex-direction: row;
+      font-size: 24rpx;
+      color: #5f5f5f;
+      .score-value{
+        margin-left: 10rpx;
+      }
+    }
+    .info-type{
+      font-size: 26rpx;
+      color: #5f5f5f;
+    }
+    .info-price{
+      display: flex;
+      flex-direction: row;
+      font-size: 30rpx;
+      color: #f60;
+      font-weight: 700;
+      .price-unit{
+        font-size: 20rpx;
+        margin-top: 10rpx;
+      }
+    }
+  }
+}
